--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,3 +1,36 @@
-<p>
-  graficas1 works!
-</p>
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <h3 class="card-title">{{graficos.grafico1.leyenda}}</h3>
+            <div class="card-body">
+                <app-grafica-dona [labels]="graficos.grafico1.labels" [data]="graficos.grafico1.data"></app-grafica-dona>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <h3 class="card-title">{{graficos.grafico2.leyenda}}</h3>
+            <div class="card-body">
+                <app-grafica-dona [labels]="graficos.grafico2.labels" [data]="graficos.grafico2.data"></app-grafica-dona>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <h3 class="card-title">{{graficos.grafico3.leyenda}}</h3>
+            <div class="card-body">
+                <app-grafica-dona [labels]="graficos.grafico3.labels" [data]="graficos.grafico3.data"></app-grafica-dona>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <h3 class="card-title">{{graficos.grafico4.leyenda}}</h3>
+            <div class="card-body">
+                <app-grafica-dona [labels]="graficos.grafico4.labels" [data]="graficos.grafico4.data"></app-grafica-dona>
+            </div>
+        </div>
+    </div>
+</div>
